--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -3,3 +3,12 @@
     display: flex;
     justify-content: center;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #3D504C;
+    border-radius: 5px;
+}
